<resources>
    <string name="app_name">GuessWho</string>
    <string name="action_settings">Settings</string>
    <string name="picture_description">picture</string>
    <string name="take_picture">Take picture</string>
    <string name="picture_preview">Picture preview</string>
    <string name="name">Name</string>
    <string name="traits">Traits</string>
    <string name="start_game">Start game</string>
    <string name="character_settings">Character settings</string>
    <string name="game_logo">Game logo</string>
    <string name="title_activity_test">Test</string>
    <string name="save">Save</string>
    <string name="your_character">Your character</string>
</resources>
